# injactor

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  build.sh  run.sh
src/: CMakeLists.txt  config.h.in  cookie-factory.cpp  cookie-factory.h  main.cpp  tty_colors.h
src/include/: inja.hpp
